compiler/test/programs/syntax_error/invalid_value_type.fl
<?xml version="1.0" encoding="UTF-8"?>
<fluir xmlns:fl="FLUIR::LANGUAGE::SOURCE">
    <fl:function
        name="foo"
        id="1"
        x="10"
        y="10"
        z="3"
        w="100"
        h="100">
        <body>
            <fl:not-a-constant
                id="1"
                x="0"
                y="10"
                z="3"
                w="5"
                h="5">
                <fl:float>0.0</fl:float>
            </fl:not-a-constant>
        </body>
    </fl:function>
</fluir>
